// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chip design tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "95190f48c25f57f48d9a200fa638d7c8165f3d6f3e0032f92d3a5aa112e7d86c",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    46,
    72,
    1,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "sprite_summary",
    144,
    79,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "95190f48c25f57f48d9a200fa638d7c8165f3d6f3e0032f92d3a5aa112e7d86c",
  ],
  [
    "text_summary",
    38,
    155,
    7,
    0,
    2,
    11,
    "db1e4f4c17ec1352284e69fc29acb2c006f228baf99c7055f38b12bfe5d21e54",
  ],
  [
    "text_summary",
    19,
    138,
    1,
    0,
    0,
    104,
    "8c970b9bc8d7e5dbb3f529b1c3888b93996fbab248bd3607977d9eb1a5c56b83",
  ],
  [
    "text_summary",
    18,
    44,
    1,
    0,
    0,
    121,
    "7607df20339e7b691e3e42d1304f6b13056ee8b3bed158d7281792e1ff8145d1",
  ],
  [
    "text_summary",
    152,
    66,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "text_summary",
    109,
    85,
    1,
    0,
    0,
    0,
    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  ],
  [
    "text_summary",
    41,
    95,
    1,
    0,
    0,
    35,
    "2f8276c3932434fd88921aa3c28cf314bb389688a6c13f8667f729b870c05af8",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    46,
    72,
    1,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "sprite_summary",
    144,
    79,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`robot anatomy tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "4c3bf1be1e95315943817537513dd1cdf31204f9dd2dcfcb76d870300d20ffa9",
  ],
  [
    "sprite_summary",
    144,
    76,
    7,
    "553f41bfb7bb16201557b0855bee795b07b7e11758a787115f3c9d5ad3ed874b",
  ],
  [
    "sprite_summary",
    145,
    93,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    76,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "4c3bf1be1e95315943817537513dd1cdf31204f9dd2dcfcb76d870300d20ffa9",
  ],
  [
    "text_summary",
    26,
    154,
    3,
    0,
    2,
    13,
    "341afcd98022c9c309dba30ce6fbb5fd052c78ad522729bdf07abecf01691c26",
  ],
  [
    "text_summary",
    17,
    127,
    1,
    0,
    0,
    198,
    "1360165aece3e751cda83f272a207e85d48fe370f3dfc77b8bc642303a679405",
  ],
  [
    "text_summary",
    42,
    39,
    1,
    0,
    0,
    68,
    "1bed28e943ef60428cf721781f2571f4e7184559f9a0fca909e72e210571f18a",
  ],
  [
    "text_summary",
    152,
    82,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "sprite_summary",
    144,
    76,
    7,
    "553f41bfb7bb16201557b0855bee795b07b7e11758a787115f3c9d5ad3ed874b",
  ],
  [
    "sprite_summary",
    145,
    93,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    76,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`robot circuits tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "f1cd9684aa47fe7e96f06a2d539eda0ef7221ebf59b3f52baddecd8f34f2af53",
  ],
  [
    "sprite_summary",
    143,
    31,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    143,
    48,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    143,
    31,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "f1cd9684aa47fe7e96f06a2d539eda0ef7221ebf59b3f52baddecd8f34f2af53",
  ],
  [
    "text_summary",
    17,
    120,
    1,
    0,
    0,
    181,
    "569136041b3de7c15e561c9bf73a325a29cab1541e08dfc21789e75d7029f94d",
  ],
  [
    "text_summary",
    152,
    34,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "text_summary",
    24,
    149,
    3,
    0,
    2,
    14,
    "16d0d6eeee93c85b1736cf9768aa490aa6905dcd8ca76969a61686a9c5e6674b",
  ],
  [
    "sprite_summary",
    143,
    31,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    143,
    48,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    143,
    31,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`robot teamwork tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "1b151860e95846af85d957d1828f16a7f130917176f55f19be5fb53acd183d1e",
  ],
  [
    "sprite_summary",
    144,
    48,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    144,
    65,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    48,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "1b151860e95846af85d957d1828f16a7f130917176f55f19be5fb53acd183d1e",
  ],
  [
    "text_summary",
    21,
    152,
    7,
    0,
    2,
    14,
    "2291238739d2e3b9fee7f45ef4c0622753aa9962c0f2c13f0e23e75f54a38335",
  ],
  [
    "text_summary",
    152,
    52,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "text_summary",
    16,
    27,
    1,
    0,
    0,
    47,
    "3768b1e94e3e676ee6b47354b3e2095cf2896787902fac4754bd47e7fbc31632",
  ],
  [
    "text_summary",
    17,
    125,
    1,
    0,
    0,
    133,
    "f7e7a8f075d63563c9937ef39deed423d8bdb44dface812977efb32e1b8620bd",
  ],
  [
    "sprite_summary",
    144,
    48,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    144,
    65,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    48,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`robot wiring tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "4c3bf1be1e95315943817537513dd1cdf31204f9dd2dcfcb76d870300d20ffa9",
  ],
  [
    "sprite_summary",
    144,
    79,
    7,
    "553f41bfb7bb16201557b0855bee795b07b7e11758a787115f3c9d5ad3ed874b",
  ],
  [
    "sprite_summary",
    46,
    72,
    1,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "sprite_summary",
    145,
    96,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    79,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    13,
    4,
    "4c3bf1be1e95315943817537513dd1cdf31204f9dd2dcfcb76d870300d20ffa9",
  ],
  [
    "text_summary",
    26,
    156,
    7,
    0,
    2,
    12,
    "64a93b5213877bc66c4eb90ff464fcf0609bf9aa57f19b591f3414fc5601b4e3",
  ],
  [
    "text_summary",
    16,
    135,
    1,
    0,
    0,
    146,
    "27e9fcfd73be886673463da6f2a506263f5c68fb317129864ecb7726d3adeff2",
  ],
  [
    "text_summary",
    16,
    60,
    1,
    0,
    0,
    43,
    "6cd9206822fffca7322884b2410b065024505fcab165a866d7f0291d1b3604ec",
  ],
  [
    "text_summary",
    152,
    84,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "sprite_summary",
    144,
    79,
    7,
    "553f41bfb7bb16201557b0855bee795b07b7e11758a787115f3c9d5ad3ed874b",
  ],
  [
    "sprite_summary",
    46,
    72,
    1,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "sprite_summary",
    145,
    96,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    79,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`sensors tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    12,
    4,
    "b01af4b209edb350dee833111f9600c814a47561f49ed74dd5270d8c85b3c0d6",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "d83c718ec68191f820bb27aed3807e9a900ed787d84e47b918cb67692007abfe",
  ],
  [
    "sprite_summary",
    145,
    79,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    12,
    4,
    "b01af4b209edb350dee833111f9600c814a47561f49ed74dd5270d8c85b3c0d6",
  ],
  [
    "text_summary",
    19,
    143,
    1,
    0,
    0,
    171,
    "9584b72a6a450883b28aa1b58ff3a556fbc2dc3829eae889bf7289848f36f4bc",
  ],
  [
    "text_summary",
    30,
    46,
    1,
    0,
    0,
    94,
    "1c7fc579a0593d078a8b11a59c0bed48dad148d3392faadc1c4ee42b79fb4a5f",
  ],
  [
    "text_summary",
    152,
    66,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "text_summary",
    49,
    155,
    3,
    0,
    2,
    7,
    "8270c57d74c0ed8b9f7618f74b103877d02e601730591f3ec1dd34a987619b1b",
  ],
  [
    "text_summary",
    152,
    81,
    1,
    0,
    0,
    0,
    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "d83c718ec68191f820bb27aed3807e9a900ed787d84e47b918cb67692007abfe",
  ],
  [
    "sprite_summary",
    145,
    79,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    144,
    62,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;

exports[`toolkit tutorial engine output until frame 1`] = `
[
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "b01af4b209edb350dee833111f9600c814a47561f49ed74dd5270d8c85b3c0d6",
  ],
  [
    "sprite_summary",
    143,
    63,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    143,
    80,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    143,
    63,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "cga_clear",
  ],
  [
    "check_joystick",
  ],
  [
    "check_keyboard",
  ],
  [
    "dl_clear",
  ],
  [
    "room_summary",
    6,
    4,
    "b01af4b209edb350dee833111f9600c814a47561f49ed74dd5270d8c85b3c0d6",
  ],
  [
    "text_summary",
    16,
    133,
    1,
    0,
    0,
    194,
    "7bf9a64e17cdfb5765e4ad64220789e08c5b785f46e2b8d6114019ae03f5c548",
  ],
  [
    "text_summary",
    26,
    44,
    1,
    0,
    0,
    87,
    "84f93369ae3b41611142b706e34d4f1c2c81e9823eb040e3d8fc8261649818df",
  ],
  [
    "text_summary",
    35,
    151,
    3,
    0,
    2,
    11,
    "4ff1b5b2fd4310b00089dabeee5038eaeadb19cb15bd895c383f37e91fc202a4",
  ],
  [
    "text_summary",
    72,
    16,
    1,
    0,
    0,
    0,
    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  ],
  [
    "text_summary",
    17,
    125,
    1,
    0,
    0,
    0,
    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  ],
  [
    "text_summary",
    16,
    39,
    1,
    0,
    0,
    0,
    "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
  ],
  [
    "text_summary",
    152,
    68,
    1,
    0,
    0,
    2,
    "65d6d3b2f4e7dc83dfa670ecf11571a897ec63b8cf115d45fb646f1c7b14d63f",
  ],
  [
    "sprite_summary",
    143,
    63,
    7,
    "87dcde7fa6df23e15fa7ba9b2a1f31408eac832f4e615ea815ae92024e3d818b",
  ],
  [
    "sprite_summary",
    143,
    80,
    5,
    "70f64de80803b24081bd734b6976ab551f26166fc06eb01946fff740ada40601",
  ],
  [
    "sprite_summary",
    143,
    63,
    7,
    "374708fff7719dd5979ec875d56cd2286f6d3cf7ec317a3b25632aab28ec37bb",
  ],
  [
    "dl_present",
  ],
  [
    "clock",
    396040,
  ],
  [
    "return_from_run",
  ],
]
`;
